--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,315 @@
-.App {
+.inventory-header h1 {
+  text-align: center;
+  font-size: 34px;
+  font-weight: bold;
+  border-bottom: 2px solid black;
+  width: 150px;
+  margin-left: 45%;
+  margin-top: 62px;
+
+}
+
+.inventory-header {
+  background-color: rgb(136, 135, 135);
+  height: 100%;
+}
+
+.inventory-container {
+  margin-left: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 100px;
+
+}
+
+.link {
+  display: flex;
+  gap: 100px;
+
+}
+
+.link a {
+  text-decoration: none;
+  border-radius: 5px;
+  color: white;
+  border: 1px solid black;
+  background-color: black;
+  padding: 3px;
+  font-weight: bold;
+}
+
+.link a:hover {
+  background-color: rgb(51, 51, 51);
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  background-color: rgb(80, 80, 80);
+  width: 100%;
+  color: white;
+  transition: backdrop-filter 0.05s ease-in-out;
+}
+
+.navbar-container h3 {
+  margin-left: 10px;
+}
+
+.navbar-container a {
+  text-align: center;
+  width: 100px;
+  margin-top: 10px;
+  margin-right: 10px;
+  padding: 5px;
+  border: 1px solid rgb(68, 68, 68);
+  background-color: rgb(68, 68, 68);
+  border-radius: 5px;
+  height: 30px;
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+
+.navbar-container.blur {
+  backdrop-filter: blur(20px);
+  background-color: rgb(126, 125, 125);
+
+}
+
+.inventory-header.blur {
+  backdrop-filter: blur(20px);
+  background-color: rgb(211, 200, 200);
+}
+
+.navbar-container a:hover {
+  background-color: rgb(107, 107, 107);
+  border: 1px solid rgb(107, 107, 107);
+}
+
+.inventory-container img {
+  width: 200px;
+  height: 200px;
+}
+
+/*Edit-Item*/
+.edit-container {
+  background-color: black;
+  background-size: cover;
+  height: 98.5vh;
+  padding-top: 10px;
+}
+
+.edit-container h2 {
+  color: white;
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.Edit-Item {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+  font-size: 20px;
+  background-color: rgb(75, 175, 214);
+  width: 400px;
+  height: 300px;
+  margin-left: 35%;
+  border-radius: 10px;
+  font-size: 19px;
+}
+
+.Edit-Item input {
+  font-size: 17px;
+  width: 250px;
+  height: 30px;
+}
+
+.Edit-Item textarea {
+  font-size: 17px;
+  width: 250px;
+  height: 60px;
+}
+
+.Edit-Item button {
+  margin-top: 30px;
+  width: 55px;
+  height: 32px;
+  font-size: 17px;
+  font-weight: bold;
+  border-radius: 5px;
+  background-color: black;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.Edit-Item button:hover {
+  background-color: rgb(43, 41, 41);
+}
+
+.Edit-Item a {
+  margin-left: 53%;
+  text-decoration: none;
+  border: 1px solid red;
+  background-color: red;
+  border-radius: 5px;
+  color: white;
+  padding-right: 5px;
+  padding-bottom: 4px;
+  font-weight: bold;
+}
+
+.Edit-Item a:hover {
+  border: 1px solid rgb(136, 38, 38);
+  background-color: rgb(136, 38, 38);
+}
+
+/*details-container*/
+.details-container {
+  background-color: rgb(121, 117, 117);
+  background-size: cover;
+  height: 98.5vh;
+  padding-top: 10px;
+  color: white;
+}
+
+.details-container h2 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.details {
+  margin-left: 10%;
+  font-size: 18px;
+}
+
+.details button {
+  width: 100px;
+  height: 30px;
+  font-size: 17px;
+  font-weight: bold;
+  border-radius: 5px;
+  background-color: black;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-left: 3px;
+}
+
+.details button:hover {
+  background-color: rgb(49, 48, 48);
+}
+
+.back-to-go {
+  margin-top: 10px;
+}
+
+.back-to-go a {
+  margin-left: 3px;
+  text-decoration: none;
+  border: 1px solid blue;
+  border-radius: 5px;
+  background-color: blue;
+  color: white;
+  padding: 2px;
+}
+
+.details a:hover {
+  background-color: rgb(25, 25, 199);
+  border: 1px solid rgb(25, 25, 199);
+}
+
+.newitem-header h2 {
+  text-align: center;
+  font-weight: bold;
+  font-size: 35px;
+  color: white;
+}
+
+.newitem-header {
+  background-color: black;
+  background-size: cover;
+  height: 98.5vh;
+  padding-top: 10px;
+}
+
+.newitem-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  font-size: 20px;
+  background-color: rgb(50, 182, 199);
+  width: 500px;
+  height: 400px;
+  border-radius: 10px;
+  color: antiquewhite;
+  font-weight: bold;
+  margin-left: 30%;
+
+}
+
+.form-group {
+  margin-top: 10px;
+}
+
+.form-group input {
+  width: 250px;
+  height: 25px;
+  font-size: 19px;
+}
+
+.form-group textarea {
+  width: 250px;
+  height: 60px;
+  font-size: 19px;
+}
+
+#price {
+  width: 250px;
+  height: 25px;
+  font-size: 19px;
+  margin-top: 5px;
+}
+
+#quantity {
+  width: 250px;
+  height: 25px;
+  font-size: 19px;
+  margin-top: 5px;
+}
+
+#image {
+  font-size: 17px;
+  margin-top: 5px;
+}
+
+.newitem-container button {
+  width: 90px;
+  height: 30px;
+  margin-top: 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  border: none;
+  font-weight: bold;
+}
+
+.newitem-container button:hover {
+  background-color: rgb(44, 44, 44);
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
   }
 }
